[FIX] #557 java11문법 수정