@@ -1,6 +1,7 @@
 package gg.recruit.api.user.controller.request;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import gg.recruit.api.user.service.param.FormParam;
 import lombok.Getter;
@@ -12,6 +13,7 @@ public class FormPatchRequestDto {
 	List<FormRequest> forms;
 
 	public List<FormParam> toFormParamList() {
-		return forms.stream().map(FormRequest::toFormParam).toList();
+		return forms.stream().map(FormRequest::toFormParam)
+			.collect(Collectors.toList());
 	}
 }
