@@ -1,6 +1,7 @@
 package gg.recruit.api.user.service.param;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import gg.recruit.api.user.controller.request.FormRequest;
 import lombok.AllArgsConstructor;
@@ -15,7 +16,8 @@ public class FormPatchParam {
 	List<FormParam> forms;
 
 	public List<Long> getQuestionIds() {
-		return forms.stream().map(FormParam::getQuestionId).toList();
+		return forms.stream().map(FormParam::getQuestionId)
+			.collect(Collectors.toList());
 	}
 
 }
